--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Install Playwright Browsers
-      run: npx playwright install
+    # - name: Install Playwright Browsers
+    #   run: npx playwright install --with-deps
 
     - name: Run Playwright tests
       run: npx playwright test
