--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,15 +18,29 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - uses: browser-actions/setup-firefox@v1
+
     # - name: Install Playwright Browsers
     #   run: npx playwright install --with-deps
 
     - name: Run Playwright tests
       run: npx playwright test
 
-    - uses: actions/upload-artifact@v4
-      if: always()
+    # - uses: actions/upload-artifact@v4
+    #   if: always()
+    #   with:
+    #     name: playwright-report
+    #     path: playwright-report/
+    #     retention-days: 30
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
+
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+        path: './playwright-report/index.html'
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
