--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,7 @@ jobs:
 
     - name: Run Playwright tests
       run: npx playwright test
+      continue-on-error: true
 
     # - uses: actions/upload-artifact@v4
     #   if: always()
