modify workflow to deploy report as page and modify config file to run on firefox

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: './playwright-report/index.html'
+        path: './playwright-report/'
 
     - name: Deploy to GitHub Pages
       id: deployment
