--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,13 +1,18 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+    
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    permissions: 
+      id-token: write
+    
     steps:
     - uses: actions/checkout@v4
 
