add pages write permission

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,13 +5,14 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-    
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     permissions: 
       id-token: write
+      pages: write
     
     steps:
     - uses: actions/checkout@v4
@@ -23,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - uses: browser-actions/setup-firefox@v1
+    # - uses: browser-actions/setup-firefox@v1
 
     # - name: Install Playwright Browsers
     #   run: npx playwright install --with-deps
